#minor changes in image service